--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "gsap": "^3.13.0",
+    "lenis": "^1.3.11",
     "lucide-react": "^0.344.0",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
