--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.344.0",
+    "mathjs": "^14.6.0",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
