--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^12.2.1",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.344.0",
